--- a/pages/calendar/calendar.wxml
+++ b/pages/calendar/calendar.wxml
@@ -1,5 +1,5 @@
 <!--data.wxml-->
-<view class="flex box box-tb box-align-center">
+<view class="flex box box-tb box-align-center bd-bottom">
   <view class="calendar pink-color box box-tb">
         <view class="top-handle fs28 box box-lr box-align-center box-pack-center">
             <view class="prev box box-rl" bindtap="handleCalendar" data-handle="prev">
@@ -17,15 +17,43 @@
             <view wx:if="{{hasEmptyGrid}}" class="grid white-color box box-align-center box-pack-center" wx:for="{{empytGrids}}" wx:key="{{index}}" data-idx="{{index}}">
             </view>
             <view class="grid white-color box box-align-center box-pack-center" wx:for="{{days}}" wx:key="{{index}}" data-idx="{{index}}">
-                <view class="day {{index >= 5 && index <= 13 ? 'border-radius pink-bg' : ''}} box box-align-center box-pack-center">{{item}}</view>
+                
+                <view class="day {{(index+1) ==today ? (curMonth==cur_month? 'border-radius pink-bg':'border-radius pink-bd') : ''}} box box-align-center box-pack-center">{{item}}</view>
+                <!--<view class="day {{(index+1) ==today ? 'border-radius pink-bg' : ''}} box box-align-center box-pack-center">{{item}}</view>-->
             </view>
         </view>
     </view>
 </view>
-<view class="flex box box-tb box-align-center">
-    <view class="flex-wrp" style="height: 300px;flex-direction:column;">
-                <view class="flex-item">1</view>
-                <view class="flex-item">2</view>
-                <view class="flex-item">3</view>
-            </view>
+
+<view class="pd25 flex box box-tb box-align-center  bd-bottom">
+    <form bindsubmit="listenFormSubmit" bindreser="listenFormReser" >
+     <view class="box box-lr box-pack-between box-align-center wd100">
+        <checkbox-group bindchange="listenCheckboxChange">
+        <!--这里用label显示内容，for循环写法 wx:for-items 默认item为每一项-->
+            <label  wx:for-items="{{items}}">
+            <!--value值和默认选中状态都是通过数据绑定在js中的-->
+                <checkbox value="{{item.name}}" checked="{{item.checked}}"/>{{item.value}}
+            </label>
+        </checkbox-group>
+      
+     </view>
+     <view class="box box-lr box-pack-between box-align-center wd100">
+         <view class=" wd25">罐头</view>
+         <view class=" wd25">
+            <switch type="switch" name="can" checked="false" bindchange="canlistenerSwitch"/>
+        </view>
+        <view class=" wd25">遛狗</view>
+         <view class=" wd25">
+            <switch type="switch" name="out" checked="false" bindchange="outlistenerSwitch"/>
+        </view>
+                
+    </view>
+    
+    <view class="box box-lr box-pack-between box-align-center wd100">
+            <!--button formType属性两个可选值submit, reset分别会触发form的submit，reser事件 -->
+            <button formType="submit" type="primary" class="wd30">提交</button>
+            <button formType="reset" type="warn" class="wd30">重置</button>
+    </view>
+    </form>
+    
 </view>
