--- a/pages/petlist/petlist.wxml
+++ b/pages/petlist/petlist.wxml
@@ -78,7 +78,7 @@
           <view class="page-body">
 
               <view class="btn-area">
-                <loading hidden="{{loading}}">
+                <loading hidden="{{loadingA}}">
                     图片上传中...
                   </loading>
                   <button type="primary" bindtap="upImg">图片上传</button>
